--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@keyframes pulse {
+    from { transform: scale(1)   ; opacity: 1;    }
+    to   { transform: scale(0.75); opacity: 0.25; }
+ }
 
+ @keyframes pulse-black {
+    0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    }
+    
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    }
+    
+    100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+  }
+/* https://www.w3schools.com/howto/howto_css_shake_image.asp */
+ /* img:hover {
+     Start the shake animation and make the animation last for 0.5 seconds 
+    animation: shake 0.5s;
+  
+     When the animation is finished, start again 
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  } */
 * {
     box-sizing: border-box;
 }
@@ -10,6 +52,13 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-size: 16px;
+    font-family: 'Righteous', cursive;
+
+}
+h1 {
+    color: white;
+    font-size: 3rem;
+    text-align: center;
 }
 
 main {
@@ -22,17 +71,42 @@ main {
 .drumkeys {
     display: flex;
     justify-content: space-around;
+    width: 45vw;
+    margin: 0 auto;
+  
 }
 
 .drumkeys kbd {
  font-family: 'Righteous', cursive;
  font-size: 2em;
  color: white;
+ text-transform: uppercase;
+ 
+}
+
+.drumkeys div:active {
+    animation: pulse 0.5s;
+    animation-iteration-count: infinite;
+}
+
+
+.drumkeys div { 
+    border: 1px white solid;
+    padding: 0.35em 1em;
+    border-radius: 50%;
+    background-color: rgb(15, 15, 14) ;
+    cursor: pointer;
+    background: black;
+    border-radius: 50%;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+   
+    transform: scale(1);
+    animation: pulse-black 2s infinite;
 }
 
 footer {
     width: 90vw;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 footer p {
@@ -41,6 +115,10 @@ footer p {
     position: relative;
     top: 4em;
     left: 67rem;
+}
+
+footer p:focus {
+    animation : pulse 200ms infinite;
 }
 .image_cred, .image_cred a {
     color: white;
